--- a/templates/css/video_player.less
+++ b/templates/css/video_player.less
@@ -3,26 +3,30 @@
 @boder-color: #D0D0D0;
 @il-vidm-box-height: 130px;
 @il-vidm-box-width: 200px;
-#maincontainer {
-  text-align: center;
-  width:      100%;
-  min-height: 100%;
-  //  padding:    0 40px;
-  //  overflow:   hidden;
-  margin:     0 auto;
-}
+//#maincontainer {
+//  text-align: center;
+//  width:      100%;
+//  min-height: 100%;
+//  //  padding:    0 40px;
+//  //  overflow:   hidden;
+//  margin:     0 auto;
+//}
 
 .mejs-container {
   background: #000000;
 }
 
-#il_center_col {
-  width:   100%;
-  padding: 0;
-}
+//#il_center_col {
+//  width:   100%;
+//  padding: 0;
+//}
 
-.il_ColumnLayout.ilClearFloat {
-  width: auto;
+//.il_ColumnLayout.ilClearFloat {
+//  width: auto;
+//}
+
+#xvidm_channel_list {
+  margin-top: -1px;
 }
 
 #videoplayer {
@@ -145,13 +149,13 @@ div.ilTableOuter {
 }
 
 .vidm_img_container {
-  padding:         12px 15px 10px 20px;
-  height:          @il-vidm-box-height;
-  width:           @il-vidm-box-width;
-  background-clip: content-box;
-  border:          none;
-  text-align: center;
-  vertical-align: middle !important;
+  padding:          12px 15px 10px 20px;
+  height:           @il-vidm-box-height;
+  width:            @il-vidm-box-width;
+  background-clip:  content-box;
+  border:           none;
+  text-align:       center;
+  vertical-align:   middle !important;
   background-color: black !important;
 }
 
@@ -175,7 +179,6 @@ tr.tblheader {
   box-shadow:       1px 1px 2px @boder-color;
   border:           1px solid @boder-color;
 }
-
 
 #row_0 {
   text-align: left;
@@ -244,11 +247,11 @@ tr.tblheader {
 .vidm_fluid {
   //background-color: green;
   //border:           1px solid red;
-  float:            left;
-  display:          inline-block;
+  float:     left;
+  display:   inline-block;
   min-width: @il-vidm-box-width * 2;
   //max-width: @il-vidm-box-width * 2;
-  width: 33%;
+  width:     33%;
 }
 
 @media (max-width: 1251px) {
