--- a/templates/default/tpl.card.html
+++ b/templates/default/tpl.card.html
@@ -1,8 +1,10 @@
 <div class="col-md-3">
 	<div class="card">
-		<div class="card-image">
-			<img class="img-responsive" src="{SRC}">
-		</div>
+		<a href="{HREF}">
+			<div class="card-image">
+				<img class="img-responsive" src="{SRC}">
+			</div>
+		</a>
 		<div class="card-content">
 			<a href="{HREF}" class="card-title">{TITLE}</a>
 			<p>{DESCRIPTION}</p>
