changes after tel

--- a/templates/default/tpl.card.html
+++ b/templates/default/tpl.card.html
@@ -2,13 +2,13 @@
 	<div class="card">
 		<a href="{HREF}">
 			<div class="card-image">
-				<img class="img-responsive" src="{SRC}">
+				<img style="z-index: -100;" class="img-responsive" src="{SRC}">
 			</div>
 		</a>
 		<div class="card-content">
 			<a href="{HREF}" class="card-title">{TITLE}</a>
 			<p>{DESCRIPTION}</p>
-			<p>Views: <span class="label label-primary">{DESCRIPTION}</span></p>
+			<p>Views: <span class="label label-primary">{COUNTER}</span></p>
 		</div>
 	</div>
 </div>
