--- a/templates/css/cards.css
+++ b/templates/css/cards.css
@@ -22,6 +22,8 @@
 .card .card-image img {
   position: relative;
   top: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .card .card-image.wide {
   width: 100%;
