--- a/templates/css/cards.less
+++ b/templates/css/cards.less
@@ -19,8 +19,10 @@
 	max-height:       148px;
 	background-color: black;
 	img {
-	  position: relative;
-	  top:      50%
+	  position:     relative;
+	  top:          50%;
+	  margin-left:  auto;
+	  margin-right: auto;
 	}
 	&.wide {
 	  width:  100%;
