--- a/templates/css/cards.css
+++ b/templates/css/cards.css
@@ -1,68 +1,77 @@
-.card {
+.il-xvid-card {
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   margin-top: 10px;
   box-sizing: border-box;
-  border-radius: 2px;
+  border-radius: 3px;
   background-clip: padding-box;
   background-color: white;
 }
-.card span.card-title {
+.il-xvid-card span.card-title {
   color: #FFFFFF;
   font-size: 24px;
   font-weight: 300;
   text-transform: uppercase;
 }
-.card .card-image {
+.il-xvid-card .il-xvid-card-image {
+  border-radius: 3px 3px 0 0;
   position: relative;
   overflow: hidden;
-  height: 148px;
-  max-height: 148px;
-  background-color: black;
+  height: 120px;
+  background-color: white;
+  width: 100%;
 }
-.card .card-image img {
+.il-xvid-card .il-xvid-card-image img {
   position: relative;
   top: 50%;
   margin-left: auto;
   margin-right: auto;
+  display: block;
+  max-height: 120px;
+  height: 120px;
+  width: auto;
+  max-width: 213.33333333px;
 }
-.card .card-image.wide {
+.il-xvid-card .il-xvid-card-image.wide {
   width: 100%;
   height: auto;
 }
-.card .card-image.tall {
+.il-xvid-card .il-xvid-card-image.tall {
   height: 100%;
   width: auto;
 }
-.card .card-image ​ span.card-title {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 16px;
-}
-.card .card-content {
-  padding: 16px;
-  border-radius: 0 0 2px 2px;
+.il-xvid-card .il-xvid-card-content {
+  background-color: #F4F4F4;
+  padding: 10px;
+  border-radius: 0 0 3px 3px;
   background-clip: padding-box;
   box-sizing: border-box;
+  overflow-wrap: break-word;
 }
-.card .card-content p {
+.il-xvid-card .il-xvid-card-content p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   margin: 0;
   color: inherit;
+  line-height: 26px;
 }
-.card .card-content span.card-title {
+.il-xvid-card .il-xvid-card-content.il-xvid-card-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   line-height: 48px;
 }
-.card .card-action {
+.il-xvid-card .il-xvid-card-action {
   border-top: 1px solid rgba(160, 160, 160, 0.2);
   padding: 16px;
 }
-.card .card-action a {
+.il-xvid-card .il-xvid-card-action a {
   color: #FFAB40;
   margin-right: 16px;
   transition: color 0.3s ease;
   text-transform: uppercase;
 }
-.card .card-action a:hover {
+.il-xvid-card .il-xvid-card-action a:hover {
   color: #FFD8A6;
   text-decoration: none;
 }
