--- a/templates/css/video_player.css
+++ b/templates/css/video_player.css
@@ -98,7 +98,6 @@ div.ilTableOuter {
   border: none;
   text-align: center;
   vertical-align: middle !important;
-  background-color: black !important;
 }
 thead {
   display: none;
@@ -170,4 +169,12 @@ tr.tblheader {
     max-width: 802px;
     margin-right: 15px;
   }
+}
+.label-gold {
+  background-color: #b19c63;
+  float: right;
+}
+.label-gold[href]:hover,
+.label-gold[href]:focus {
+  background-color: #96824b;
 }
