--- a/templates/css/cards.less
+++ b/templates/css/cards.less
@@ -1,8 +1,25 @@
-.card {
+@il-xvid-card-max-height: 120px;
+@il-xvid-boder-radius: 3px;
+
+.aspect-ratio(@ratio-width, @ratio-height, @height) {
+  max-height: @height;
+  height:     @height;
+  width:      auto;
+  max-width:  @height /@ratio-height*@ratio-width;
+
+}
+
+.dotted() {
+  overflow:      hidden;
+  text-overflow: ellipsis;
+  white-space:   nowrap;
+}
+
+.il-xvid-card {
   box-shadow:       0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   margin-top:       10px;
   box-sizing:       border-box;
-  border-radius:    2px;
+  border-radius:    @il-xvid-boder-radius;
   background-clip:  padding-box;
   background-color: white;
   span.card-title {
@@ -12,17 +29,21 @@
 	text-transform: uppercase;
   }
 
-  .card-image {
+  .il-xvid-card-image {
+	border-radius:    @il-xvid-boder-radius @il-xvid-boder-radius 0 0;
 	position:         relative;
 	overflow:         hidden;
-	height:           148px;
-	max-height:       148px;
-	background-color: black;
+	height:           @il-xvid-card-max-height;
+	background-color: white;
+	width:            100%;
+
 	img {
 	  position:     relative;
 	  top:          50%;
 	  margin-left:  auto;
 	  margin-right: auto;
+	  display:      block;
+	  .aspect-ratio(16, 9, @il-xvid-card-max-height);
 	}
 	&.wide {
 	  width:  100%;
@@ -32,28 +53,28 @@
 	  height: 100%;
 	  width:  auto;
 	}
-	​
-	span.card-title {
-	  position: absolute;
-	  bottom:   0;
-	  left:     0;
-	  padding:  16px;
-	}
+
   }
-  .card-content {
-	padding:         16px;
-	border-radius:   0 0 2px 2px;
-	background-clip: padding-box;
-	box-sizing:      border-box;
+  .il-xvid-card-content {
+	background-color: #F4F4F4;
+	padding:          10px;
+	border-radius:    0 0 @il-xvid-boder-radius @il-xvid-boder-radius;
+	background-clip:  padding-box;
+	box-sizing:       border-box;
+	overflow-wrap:    break-word;
+
 	p {
-	  margin: 0;
-	  color:  inherit;
+	  .dotted();
+	  margin:      0;
+	  color:       inherit;
+	  line-height: 26px;
 	}
-	span.card-title {
+	&.il-xvid-card-title {
+	  .dotted();
 	  line-height: 48px;
 	}
   }
-  .card-action {
+  .il-xvid-card-action {
 	border-top: 1px solid rgba(160, 160, 160, 0.2);
 	padding:    16px;
 	a {
