--- a/templates/default/tpl.card.html
+++ b/templates/default/tpl.card.html
@@ -1,12 +1,12 @@
-<div class="col-md-3">
-	<div class="card">
+<div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+	<div class="il-xvid-card">
 		<a href="{HREF}">
-			<div class="card-image">
-				<img style="z-index: -100;" class="img-responsive" src="{SRC}">
+			<div class="il-xvid-card-image">
+				<img style="z-index: -100;" src="{SRC}">
 			</div>
 		</a>
-		<div class="card-content">
-			<a href="{HREF}" class="card-title">{TITLE}</a>
+		<div class="il-xvid-card-content">
+			<a href="{HREF}"><p class="il-xvid-card-title">{TITLE}</p></a>
 			<p>{DESCRIPTION}</p>
 			<p>Views: <span class="label label-primary">{COUNTER}</span></p>
 		</div>
