--- a/templates/default/tpl.video_player.html
+++ b/templates/default/tpl.video_player.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="./Customizing/global/plugins/Services/UIComponent/UserInterfaceHook/VideoManager/templates/lib/build/mediaelementplayer.min.css" media="screen">
 <script type="text/javascript" src="./Customizing/global/plugins/Services/UIComponent/UserInterfaceHook/VideoManager/templates/lib/build/mediaelement-and-player.min.js"></script>
-<div id="maincontainer">
-	<div id="leftcontent">
+<div id="xvid-maincontainer">
+	<div id="xvid-leftcontent">
 		<div id="videoplayer" style="max-width:800px;max-height:450px;align-content:center">
 			<video poster="{POSTER_SRC}" controls style="max-width:800px;max-height:450px;width:100%;height:100%;">
 				<!-- MP4 for Safari, IE9, iPhone, iPad, Android, and Windows Phone 7 -->
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="related_videos">
+	<div id="xvid-related_videos">
 		{RELATED_VIDEOS_TABLE}
 	</div>
 </div>
