--- a/templates/default/tpl.card.html
+++ b/templates/default/tpl.card.html
@@ -7,8 +7,8 @@
 		</a>
 		<div class="il-xvid-card-content">
 			<a href="{HREF}"><p class="il-xvid-card-title">{TITLE}</p></a>
-			<p>{DESCRIPTION}</p>
-			<p>Views: <span class="label label-primary">{COUNTER}</span></p>
+			<p class="small">{DESCRIPTION}</p>
+			<p class="small overflow">Views: <span class="label label-primary">{COUNTER}</span></p>
 		</div>
 	</div>
 </div>
