--- a/templates/default/tpl.video_player.html
+++ b/templates/default/tpl.video_player.html
@@ -14,7 +14,7 @@
 			</video>
 		</div>
 		<script>
-//			$('video').mediaelementplayer({defaultVideoWidth: 960, defaultVideoHeight: 600});
+			//			$('video').mediaelementplayer({defaultVideoWidth: 960, defaultVideoHeight: 600});
 			$('video').mediaelementplayer();
 		</script>
 		<div id="description_container">
@@ -42,7 +42,9 @@
 			</div>
 		</div>
 	</div>
-	<div id="xvid-related_videos">
-		{RELATED_VIDEOS_TABLE}
-	</div>
+	<!--<div id="xvid-rightcontent">-->
+		<div id="xvid-related_videos">
+			{RELATED_VIDEOS_TABLE}
+		</div>
+	<!--</div>-->
 </div>
