--- a/templates/css/cards.css
+++ b/templates/css/cards.css
@@ -1,8 +1,7 @@
 .il-xvid-card {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  margin-top: 10px;
+  margin-bottom: 40px;
   box-sizing: border-box;
-  border-radius: 3px;
+  border-radius: 0px;
   background-clip: padding-box;
   background-color: white;
 }
@@ -13,7 +12,7 @@
   text-transform: uppercase;
 }
 .il-xvid-card .il-xvid-card-image {
-  border-radius: 3px 3px 0 0;
+  border-radius: 0px 0px 0 0;
   position: relative;
   overflow: hidden;
   height: 120px;
@@ -23,8 +22,6 @@
 .il-xvid-card .il-xvid-card-image img {
   position: relative;
   top: 50%;
-  margin-left: auto;
-  margin-right: auto;
   display: block;
   max-height: 120px;
   height: 120px;
@@ -40,26 +37,30 @@
   width: auto;
 }
 .il-xvid-card .il-xvid-card-content {
-  background-color: #F4F4F4;
-  padding: 10px;
-  border-radius: 0 0 3px 3px;
+  padding-top: 10px;
+  border-radius: 0 0 0px 0px;
   background-clip: padding-box;
   box-sizing: border-box;
   overflow-wrap: break-word;
 }
 .il-xvid-card .il-xvid-card-content p {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   margin: 0;
   color: inherit;
-  line-height: 26px;
 }
-.il-xvid-card .il-xvid-card-content.il-xvid-card-title {
+.il-xvid-card .il-xvid-card-content p.small {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  line-height: 48px;
+  font-size: 12px;
+}
+.il-xvid-card .il-xvid-card-content p.overflow {
+  overflow: visible;
+}
+.il-xvid-card .il-xvid-card-content p.il-xvid-card-title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 18px;
 }
 .il-xvid-card .il-xvid-card-action {
   border-top: 1px solid rgba(160, 160, 160, 0.2);
